--- a/ReviewFood/ReviewFood.csproj
+++ b/ReviewFood/ReviewFood.csproj
@@ -3666,15 +3666,6 @@
     <Content Include="Assets\ckeditor\skins\moono-lisa\images\spinner.gif" />
     <Content Include="Assets\ckeditor\styles.js" />
     <Content Include="Assets\ckeditor\vendor\promise.js" />
-    <Content Include="Assets\Image\Bun-mien-mang-vit-tai-Le-Van-Sy.png" />
-    <Content Include="Assets\Image\coffee-cafe-business-logo-vector-17041579.jpg" />
-    <Content Include="Assets\Image\foody-thumbnail-web-636362516787126173.jpg" />
-    <Content Include="Assets\Image\logo.png" />
-    <Content Include="Assets\Image\pho-bat-dan-COLLAGE.jpg" />
-    <Content Include="Assets\Image\quan-an-ngon-sai-gon.jpg" />
-    <Content Include="Assets\Image\review-mon-na-ha-noi-23.jpg" />
-    <Content Include="Assets\Image\Signup.jpg" />
-    <Content Include="Assets\Image\Tin-the-thao-HOT-11-1-Thiem-ket-hop-thay-moi-nham-vo-dich-Australian-Open-2020-2500985-51918410-2560-1440-1578647129-845-width660height370.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -3976,6 +3967,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Assets\Image\" />
     <Folder Include="Views\DanhGia\" />
   </ItemGroup>
   <ItemGroup>
